--- a/mobile_hivemind/app/src/main/res/layout/fragment_home.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_home.xml
@@ -89,35 +89,41 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollViewChips"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:paddingHorizontal="12dp"
+        android:layout_marginTop="16dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewParadas"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchCard"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchCard">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewParadas">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupSetores"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:chipSpacing="8dp"
-            app:selectionRequired="true"
-            app:singleLine="true"
-            app:singleSelection="true"></com.google.android.material.chip.ChipGroup>
+            android:orientation="horizontal">
 
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroupSetores"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="#00000000"
+                app:chipSpacing="8dp"
+                app:singleSelection="false"
+                app:selectionRequired="false"
+                app:singleLine="true" />
+        </LinearLayout>
     </HorizontalScrollView>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewParadas"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="65dp"
         android:layout_marginEnd="18dp"
         android:clipToPadding="false"
         android:paddingTop="12dp"
@@ -125,8 +131,10 @@
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/horizontalScrollViewChips"
+        app:layout_constraintTop_toBottomOf="@+id/searchCard"
+        app:layout_constraintVertical_bias="1.0"
         tools:listitem="@layout/parada_item_recycleview_principal" />
 
 
