--- a/mobile_hivemind/app/src/main/res/layout/fragment_confirmation.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_confirmation.xml
@@ -56,11 +56,14 @@
         android:id="@+id/btnVoltar"
         android:layout_width="353dp"
         android:layout_height="64dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginBottom="200dp"
         android:backgroundTint="#5F33E1"
         android:text="Retornar a tela inicial"
         android:textColor="#FFFFFF"
         app:cornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="467dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDescricao" />
 </androidx.constraintlayout.widget.ConstraintLayout>
