--- a/mobile_hivemind/app/src/main/res/layout/fragment_dashboard.xml
+++ b/mobile_hivemind/app/src/main/res/layout/fragment_dashboard.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:src="@drawable/arrow_back"
-        android:tint="#FFFFFF"
+        app:tint="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
